# ApexCore

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/: CODEMAP.md  HANDOVER.md  RELEASE_1.1.0.md  general_benchmark.md  gpu_benchmark.md  ram_cache.md  scoring_v2.md  stress_score.md  troubleshooting.md  winsat.md
docs/Astra/: RELEASE_1.0.0.md  install_pitfalls.md  problems_fixes.md  test_environment.md
docs/future development/: Улучшение стресс-теста.md
docs/research/: sensor_dashboard_brief.md  stress_score_validity.md
docs/НИР/: README.md  winsat_methodology_comparison.md
packaging/astra/debian/: apexcore.desktop  apexcore.wrapper  changelog  control  copyright  postinst  postrm  prerm  rules
packaging/branding/: README.md
packaging/windows/: apexcore-sensord.spec  apexcore.spec  installer.iss
packaging/windows/bootstrapper/: App.xaml  App.xaml.cs  Bootstrapper.csproj  Bridge.cs  GpuProbe.cs  Installer.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md
scripts/: astra_rebuild_install.sh  build_astra.sh  build_branding.ps1  build_branding.sh  build_windows.ps1  dev.ps1  diagnose_install.ps1  fetch_dotnet9.ps1  fetch_lhm.ps1  fetch_pawnio.ps1  fetch_python_standalone.sh  fetch_smartmontools.ps1  fetch_webview2.ps1  install_pawnio_service.ps1  install_sensord.ps1  install_sensord_bundle.ps1  smoke_check.ps1  smoke_check.sh  sync_version.ps1  sync_version.sh
scripts/validation/: README.md  degrade_cpu_linux.sh  degrade_cpu_windows.ps1  run_validation.py
src/apexcore/: __init__.py  __main__.py
src/apexcore/application/: __init__.py  _cpu_text.py  benchmark_service.py  cpu_ranking.py  diagnostics.py  diagnostics_sensors.py  general_benchmark.py  general_benchmark_score.py  gpu_benchmark.py  gpu_benchmark_score.py  gpu_roofline.py  gpu_stress.py  multi_run.py  normalization.py  parallel_runner.py  ram_cache_service.py  references.py  roofline.py  safety_gate.py  scoring.py  scoring_service.py  sensor_keys.py  sensor_service.py  single_multi_compare.py  stability_service.py  statistics.py  stress_orchestrator.py  stress_score.py  (+8 more)
tests/integration/: test_gpu_benchmark_repo.py  test_gpu_stress_repo.py  test_micro_run_repo.py  test_sqlite_repo.py  test_winsat_repo.py  test_winsat_service.py
tests/unit/: test_acpi_fake_zone_filter.py  test_benchmark_screen.py  test_builtin_stress_engines.py  test_cache_topology.py  test_capability_summary.py  test_classify_reasons.py  test_cli_main.py  test_cpu_affinity.py  test_cpu_frequencies.py  test_cpu_ranking.py  test_cpu_topology.py  test_data_dir_migration.py  test_diagnostics.py  test_disk_bench.py  test_disk_boot_drive.py  test_disk_inventory.py  test_disk_peak.py  test_doctor_db_health.py  test_doctor_repair.py  test_dram_info.py  test_env_translation.py  test_general_benchmark_orchestrator.py  test_general_benchmark_repo.py  test_general_benchmark_score.py  test_gpu_benchmark_orchestrator.py  test_gpu_benchmark_score.py  test_gpu_filter.py  test_gpu_opencl_backend.py  test_gpu_roofline.py  test_gpu_screen.py  test_gpu_stress.py  test_gpu_stress_cli.py  test_hwmon_thresholds.py  test_keyboard.py  test_menu_nav_keys.py  test_menu_settings.py  test_microbench.py  test_models.py  test_multi_run.py  test_normalization.py  (+50 more)
(+175 files in other folders)
